# namma

./: .gitignore  MISSING_BACKEND.md  main.py  pyproject.toml
backend/: .env.example  db.sqlite3
backend/accounts/: admin.py  models.py  serializers.py  tests.py  throttling.py  urls.py  views.py
backend/ai/: admin.py  apps.py  gateways.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
backend/analytics/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
backend/backend/: celery.py  settings.py  urls.py
backend/commerce/: admin.py  apps.py  models.py  pricing.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/communications/: admin.py  gateways.py  models.py  serializers.py  services.py  sns.py  tasks.py  test_whatsapp.py  tests.py  urls.py  views.py
backend/core/: admin.py  api.py  apps.py  audit.py  checks.py  crypto.py  events.py  logging.py  middleware.py  models.py  retention.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/customers/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/financials/: admin.py  gateways.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py  (+1 more)
frontend/: .env.example  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.js  wrangler.jsonc
system design/: Namaa_docs.md  Namaa_pricing_and_gtm_plan.md
system-design/: Nama-founder-playbook.md  database-models-2.txt  database-models.txt  models-Data-Design.drawio  the-complete-system-design.md
(+207 files in other folders)
