[project]
name = "namma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.28",
    "celery[redis]>=5.6.3",
    "cryptography>=48.0.1",
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "pyotp>=2.9.0",
    "python-dotenv>=1.2.2",
]
